# ascii-colorizer

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.cast  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ascii_colorizer/: __init__.py  cli.py  gpu_processor.py  gpu_video_processor.py  image_processor.py  renderer.py  utils.py  video_processor.py
src/: lib.rs  main.rs
